make sure overflow-y: scroll works

--- a/treeEmployeeStructure/employeeTree/static/custom/css/main.css
+++ b/treeEmployeeStructure/employeeTree/static/custom/css/main.css
@@ -5,7 +5,7 @@ html, body {
     width: 100%;
 }
 
-body {
+.overflow-y-scroll {
     overflow-y: scroll;
 }
 
